Added new navlink option, started working on AI (currently incomplete)

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -44,7 +44,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="WallJump",Key=SpaceBar,bShift=True,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Secondary",Key=RightMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Switch",Key=Subtract,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="Primary",Key=Q,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Primary",Key=LeftMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="W_CharaOverview",Key=C,bShift=False,bCtrl=True,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Ability 1",Key=R,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Ability 2",Key=E,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
